--- a/index.html
+++ b/index.html
@@ -8,8 +8,48 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <div class="container">
-    <img src="logo.png" alt="True North Global Logo" class="logo" />
-  </div>
+  <header>
+    <img src="logo.png" alt="True North Global Logo" class="logo"/>
+    <h1>True North Global</h1>
+    <p class="tagline">Empowering Growth Through Strategic Supply Chain & Business Solutions</p>
+  </header>
+
+  <section class="about">
+    <h2>About Us</h2>
+    <p>
+      Founded by Sharlene Ramos-Chesnes, True North Global is a consulting firm
+      focused on optimizing supply chains and supporting small business growth.
+      With executive-level expertise, Sharlene has led multi-million dollar enterprises
+      and advised clients across sectors.
+    </p>
+  </section>
+
+  <section class="services">
+    <h2>Our Services</h2>
+    <div class="services-grid">
+      <div class="service-box">
+        <h3>Supply Chain Consulting</h3>
+        <ul>
+          <li>Global logistics optimization</li>
+          <li>Strategic sourcing & procurement</li>
+          <li>Inventory & warehouse management</li>
+          <li>Compliance & risk mitigation</li>
+        </ul>
+      </div>
+      <div class="service-box">
+        <h3>Small Business Consulting</h3>
+        <ul>
+          <li>Business launch & scale-up strategies</li>
+          <li>Operations improvement</li>
+          <li>Funding & grant support</li>
+          <li>Leadership development</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <p>© 2025 True North Global. All rights reserved.</p>
+  </footer>
 </body>
 </html>
