--- a/index.html
+++ b/index.html
@@ -48,6 +48,32 @@
     </div>
   </section>
 
+  <section class="updates">
+    <h2>Trade Agreement Updates</h2>
+    <ul>
+      <li><strong>May 2025:</strong> U.S.-Mexico agreement revisions pending approval.</li>
+      <li><strong>May 2025:</strong> EU tariff changes affecting raw material importers.</li>
+      <li><strong>April 2025:</strong> Canada-Pacific free trade adjustments implemented.</li>
+    </ul>
+  </section>
+
+  <section class="contact">
+    <h2>Feedback / Request Form</h2>
+    <p>Use the form below to ask questions, request services, or provide feedback.</p>
+    <form action="https://formspree.io/f/mnqegzdz" method="POST" class="contact-form">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" required />
+
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required />
+
+      <label for="message">Message:</label>
+      <textarea id="message" name="message" rows="4" required></textarea>
+
+      <button type="submit">Send Message</button>
+    </form>
+  </section>
+
   <footer>
     <p>© 2025 True North Global. All rights reserved.</p>
   </footer>
