--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="True North Global Logo" class="logo"/>
+    <div class="logo-wrapper">
+      <img src="logo.png" alt="True North Global Logo" class="logo"/>
+    </div>
     <h1>True North Global</h1>
     <p class="tagline">Empowering Growth Through Strategic Supply Chain & Business Solutions</p>
   </header>
@@ -55,6 +57,7 @@
       <li><strong>May 2025:</strong> EU tariff changes affecting raw material importers.</li>
       <li><strong>April 2025:</strong> Canada-Pacific free trade adjustments implemented.</li>
     </ul>
+    <p><a href="https://ustr.gov" target="_blank" class="ustr-link">View current trade policy at USTR.gov →</a></p>
   </section>
 
   <section class="contact">
