--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <section class="contact">
     <h2>Feedback / Request Form</h2>
     <p>Use the form below to ask questions, request services, or provide feedback.</p>
-    <form action="https://formspree.io/f/mnqegzdz" method="POST" class="contact-form">
+    <form action="https://formspree.io/f/mblondjz" method="POST" class="contact-form">
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required />
 
